# SAMkenXCCEngine

./: .gitattribute  setup.cfg
.github/workflows/django.yml/: Cache  Download a Build Artifact  Setup .NET Core SDK  Setup Go environment  Setup Java JDK  Setup Node.js environment  Upload a Build Artifact
.github/workflows/python-app.yml/: Close Stale Issues  Download a Build Artifact  Setup .NET Core SDK
